src/controllers/menu/menu.scss
@import '../../_variables.scss';

.menu-title {
  margin: 0;
}

.menu-layout-instructions {
  -webkit-flex: 1 0 auto;
}

.menu-layout-form {
  max-width: 480px;
}

.introduction-demo {
  display: block;
  width: 100%;
  max-width: 320px;
  margin: 1rem auto;
}

.lang-button {
  display: flex;
  border-radius: 50%;
  border: 1px solid currentColor;
  width: 2em;
  height: 2em;
  align-items: center;
  justify-content: center;
}

@media (orientation: landscape), (min-width: $mq-xlarge-min) {
  .menu-layout {
    align-items: center;
  }
}

